# MFAT

./: CMakeLists.txt  Makefile  README.md  huffarc
include/: archive.h  bitstream.h  crc32.h  huffman.h
src/: archive.cpp  bitstream.cpp  crc32.cpp  huffman.cpp  main.cpp
